--- a/TodoWeb/Views/Usuario/Index.cshtml
+++ b/TodoWeb/Views/Usuario/Index.cshtml
@@ -10,13 +10,18 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
-    <div> 
-        <table>
+    <div class="container"> 
+        <table class="table table-hover">
             <tr>
                 <th>UsuarioId</th>
                 <th>Nome</th>
+                <th>Email</th>
+                <th>Senha</th>
+                <th>Ações</th>
+                <th>Ações</th>
             </tr>
             @*@@foreach (TodoWeb.Models.Usuario u in ViewBag.Usuarios ou var u in ViewBag.Usuarios ) // quando utiiza view bag
     // abaixo quando passa parâmetro*@
@@ -25,10 +30,20 @@
             <tr>
                 <td>@u.UsuarioId</td>
                 <td>@u.Nome</td>
+                <td>@u.Email</td>
+                <td>@u.Senha</td>
+                <td><a href="/Usuario/update/@u.UsuarioId">Editar</a>
+                <td>
+                    <a href="/Usuario/delete/@u.UsuarioId">Apagar</a>
+                </td>
+
             </tr>
             }
         </table>
-        <a href="/Usuario/create">Adicionar</a>
+        <a class="btn btn-primary btn-sm" href="/Usuario/create">
+        <span class="glyphicon glyphicon-plus"></span>
+        Adicionar
+        </a>
     </div>
 </body>
 </html>
